# open-source-quartz-solar-forecast

./: .all-contributorsrc  .bumpversion.cfg  .env  .env.example  .gitignore  Contributors.md  Dockerfile  MANIFEST.in  README.md  contribution_guide.md  docker-compose.yaml  download_models.sh  forecasts.csv  pyproject.toml  requirements.txt  security.md  setup.py  test_pandas.py
.github/: api_branch_ci.yaml
.github/workflows/: api_branch_ci.yaml  container-build.yml  merged_ci.yml  publish.yaml  pytest.yaml  pytest_unit.yaml  release.yml  tagged_ci.yml
api/: README.md  main.py  run.py  utils.py
api/app/: api.py  schemas.py
api/app/utils/: enphase_utils.py
api/v0/: api.py
api/v0/app/: api.py
api/v1/: Dockerfile  README.md  README2.md  api.py  main.py  pyproject.toml
api/v1/src/: main.py
backend/: main.py
backend/app/: api.py
dashboard/dashboard_1/: package.json  vite.config.ts
dashboards/dashboard_1/: README.md  package-lock.json
dashboards/dashboard_1/src/: index.css
dashboards/dashboard_1/src/components/: PVForecastForm.tsx  PredictionTable.tsx
dashboards/dashboard_1/src/components/ui/: chart.tsx  table.tsx
dashboards/dashboard_2/: README.md  app.py
data/pv/: metadata.csv
data/pv/30_minutely/year=2010/month=11/: data.parquet
data/pv/30_minutely/year=2010/month=12/: data.parquet
data/pv/30_minutely/year=2011/month=01/: data.parquet
data/pv/30_minutely/year=2011/month=02/: data.parquet
data/pv/30_minutely/year=2011/month=03/: data.parquet
data/pv/30_minutely/year=2011/month=04/: data.parquet
data/pv/30_minutely/year=2011/month=05/: data.parquet
data/pv/30_minutely/year=2011/month=06/: data.parquet
data/pv/30_minutely/year=2011/month=07/: data.parquet
data/pv/30_minutely/year=2011/month=08/: data.parquet
data/pv/30_minutely/year=2011/month=09/: data.parquet
data/pv/30_minutely/year=2011/month=10/: data.parquet
data/pv/30_minutely/year=2011/month=11/: data.parquet
data/pv/30_minutely/year=2011/month=12/: data.parquet
data/pv/30_minutely/year=2012/month=01/: data.parquet
data/pv/30_minutely/year=2012/month=02/: data.parquet
examples/: example.py  example_notebook.ipynb  forecast_with_live_pv_data.py  inverter_example.py
examples/results/: predictions_with_recent_pv_20240704_163005.csv
examples/streamlit_app/: README.md  app.py
frontend/: app.py  index.html
frontend/src/: App.tsx
frontend/src/components/: PVForecastForm.tsx  PredicitionChart.tsx  PredictionTable.tsx
ocf_os_pv_forecast/: data.py  example.py  forecast.py
quartz_solar_forecast/: data.py  evaluation.py  forecast.py  forecast_csv.py  gen_forecasts.py  pydantic_models.py
quartz_solar_forecast/datapipes/: ocf_datapipe.py  pv_and_nwp_config.yaml  pv_config.yaml
quartz_solar_forecast/dataset/: README.md  make_test_set.py  testset.csv
quartz_solar_forecast/dataset/TZ-SAM/data analysis/: ts-sam-analysis.ipynb  tz-sam-analysis.ipynb
quartz_solar_forecast/dataset/dataset_analysis/: metadata.csv  test_set_analysis.ipynb  test_set_analysis_pv_id_vs_month.ipynb  tz-sam-analysis.ipynb
quartz_solar_forecast/eval/: forecast.py  metrics.py  nwp.py  pv.py  utils.py  visualize.py
quartz_solar_forecast/forecasts/: __init__.py  constants.py  v1.py  v1_1.py  v1_tilt_orientation.py  v2.py
quartz_solar_forecast/inverters/: README.md  enphase.py  givenergy.py  inverter.py  mock.py  mock_model.py  solaredge.py  solarman.py  solis.py  victron.py
quartz_solar_forecast/inverters/enphase/: enphase.py  enphase_model.py
quartz_solar_forecast/inverters/givenergy/: givenergy.py  givenergy_model.py
quartz_solar_forecast/inverters/solarman/: solarman.py  solarman_model.py
quartz_solar_forecast/inverters/solis/: solis.py  solis_model.py
quartz_solar_forecast/models/: model-0.3.0.pkl  model-0.3.1.pkl
quartz_solar_forecast/open-meteo/: open_meteo.py
quartz_solar_forecast/utils/: file_path.py  forecast_csv.py  hf_upload.py  sentry_logging.py
quartz_solar_forecast/weather/: __init__.py  open_meteo.py
scripts/: download_tz-sam.py  forecast_csv.py  generate_forecasts.py  generate_multiple_forecasts.py  hf_upload.py  multi_site_generate_forecasts.py  run_evaluation.py
tests/: conftest.py  test_data.py  test_forecast.py  test_forecast_no_ts.py  test_generate_forecast.py  test_generate_multiple_forecasts.py  test_hf_upload.py
tests/api_tests/: test_api.py
tests/data/: test_make_pv_data.py  test_make_test_set.py  test_process_pv_data.py
tests/eval/: test_eval_forecast.py  test_evaluation.py  test_metrics.py  test_nwp.py  test_pv.py
tests/integration/: test_hf_data.py
tests/integration/eval/: test_evaluation.py  test_nwp.py  test_pv.py  test_pv_integration.py
tests/inverters/: test_process_enphase_data.py  test_victron.py
tests/unit/: mocks.py  test_forecast.py  test_forecast_no_ts.py  test_generate_forecast.py
tests/unit/api_tests/: test_api.py
tests/unit/api_tests/v0/: test_api.py
tests/unit/api_tests/v1/: test_api_v1.py
tests/unit/data/: test_process_pv_data.py
tests/unit/eval/: test_metrics.py
tests/utils/: hf_data_utils.py  test_file_path.py  test_hf_upload.py
