[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quartz_solar_forecast_api"
version = "0.0.1"
description = "API for Open Source Solar Forecasting for a Site"
authors = [{ name = "Peter Dudfield", email = "info@openclimatefix.org" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

dependencies = [
    # Keep core dependencies that are needed for the app to run
    "streamlit",
    "huggingface_hub==0.17.3",
    "fastapi",
    "gdown==5.1.0",
    "quartz_solar_forecast"
]

[project.urls]
"Source Code" = "https://github.com/openclimatefix/Open-Source-Quartz-Solar-Forecast.git"


# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
indent-width = 4
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413",
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100
